rant detail view and templates for list and detail view

--- a/rants/main/templates/main/rant_list.html
+++ b/rants/main/templates/main/rant_list.html
@@ -3,6 +3,7 @@ Test<br>
 
 {{rant.title}}<br>
 {% for category in rant.categories.all %}
+<a href="{% url 'main:detail' rant.slug %}">{{ rant.title }}</a>
 {{ category.title}}<br>
 {% endfor %}
 {% endfor %}
