--- a/rants/main/templates/main/rant_list.html
+++ b/rants/main/templates/main/rant_list.html
@@ -1,9 +1,33 @@
-Test<br>
-{% for rant in rants %}
+{% extends 'base.html' %}
+{% block content %}
 
-{{rant.title}}<br>
-{% for category in rant.categories.all %}
-<a href="{% url 'main:detail' rant.slug %}">{{ rant.title }}</a>
-{{ category.title}}<br>
-{% endfor %}
-{% endfor %}
+<section class="relative py-20 overflow-hidden">
+    <img class="absolute top-0 right-0 xl:mt-10 -mr-24 lg:-mr-0" src="saturn-assets/images/blog/star-circle-right.svg" alt="">
+    <img class="hidden sm:block absolute bottom-0 left-0 -mb-48 lg:mb-0" src="saturn-assets/images/blog/blue-light-left.png" alt="">
+    <div class="relative container px-4 mx-auto">
+      <div class="max-w-2xl mx-auto mb-15 text-center">
+        <h1 class="font-heading text-5xl xs:text-6xl md:text-7xl font-bold">
+          <span>Rantr</span>
+        </h1>
+      </div>
+      {% for rant in rants %}
+      <div class="max-w-5xl mx-auto">
+        <div class="py-12 border-t-2 border-gray-100">
+          <div class="flex flex-wrap lg:flex-nowrap items-center">
+            <div class="w-full lg:w-auto px-4 mb-8 lg:mb-0">
+            </div>
+            <div class="w-full lg:w-9/12 px-4 mb-10 lg:mb-0">
+              <div class="max-w-2xl">
+                <p class="text-2xl font-semibold text-gray-900"><a href="{% url 'main:detail' rant.slug %}">{{ rant.title }}</a></p>
+                {% for category in rant.categories.all %}
+                <span class="block text-gray-400 mb-1">{{ category.title }}</span>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </section>
+  {% endblock content %}
