--- a/rants/main/templates/main/rant_list.html
+++ b/rants/main/templates/main/rant_list.html
@@ -12,7 +12,7 @@
       </div>
       {% for rant in rants %}
       <div class="max-w-5xl mx-auto">
-        <div class="py-12 border-t-2 border-gray-100">
+        <div class="py-8">
           <div class="flex flex-wrap lg:flex-nowrap items-center">
             <div class="w-full lg:w-auto px-4 mb-8 lg:mb-0">
             </div>
