--- a/rants/main/templates/main/rant_list.html
+++ b/rants/main/templates/main/rant_list.html
@@ -16,7 +16,7 @@
           <div class="flex flex-wrap lg:flex-nowrap items-center">
             <div class="w-full lg:w-auto px-4 mb-8 lg:mb-0">
             </div>
-            <div class="w-full lg:w-9/12 px-4 mb-10 lg:mb-0">
+            <div class="w-full lg:w-9/12 px-4 mb-10 lg:mb-0">{{ rant.user.username}}
               <div class="max-w-2xl">
                 <p class="text-2xl font-semibold text-gray-900"><a href="{% url 'main:detail' rant.slug %}">{{ rant.title }}</a></p>
                 {% for category in rant.categories.all %}
