added created and updated fields in rant

--- a/rants/main/templates/main/rant_list.html
+++ b/rants/main/templates/main/rant_list.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <section class="relative py-20 overflow-hidden">
-    <img class="absolute top-0 right-0 xl:mt-10 -mr-24 lg:-mr-0" src="saturn-assets/images/blog/star-circle-right.svg" alt="">
-    <img class="hidden sm:block absolute bottom-0 left-0 -mb-48 lg:mb-0" src="saturn-assets/images/blog/blue-light-left.png" alt="">
+    <!-- <img class="absolute top-0 right-0 xl:mt-10 -mr-24 lg:-mr-0" src="saturn-assets/images/blog/star-circle-right.svg" alt="">
+    <img class="hidden sm:block absolute bottom-0 left-0 -mb-48 lg:mb-0" src="saturn-assets/images/blog/blue-light-left.png" alt=""> -->
     <div class="relative container px-4 mx-auto">
       <div class="max-w-2xl mx-auto mb-15 text-center">
         <h1 class="font-heading text-5xl xs:text-6xl md:text-7xl font-bold">
