--- a/rants/main/templates/main/rant_list.html
+++ b/rants/main/templates/main/rant_list.html
@@ -36,7 +36,7 @@
       </div>
       {% endfor %}
       {% else %}
-      Must login
+      Must login to view rants
       {% endif %}
     </div>
   </section>
