--- a/rants/main/templates/base.html
+++ b/rants/main/templates/base.html
@@ -6,8 +6,10 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+        {% include 'partials/_navbar.html' %}
         {% block content %}
 
         {% endblock content %}
+        {% include 'partials/_footer.html' %}
     </body>
 </html>
