added Fringe in navbar and something else in footer

--- a/rants/main/templates/partials/_footer.html
+++ b/rants/main/templates/partials/_footer.html
@@ -1,4 +1,5 @@
-<section class="py-16 position-relative overflow-hidden"><img class="position-absolute top-0 start-0 h-100" src="flaro-assets/images/footers/gradient4.svg" alt=""/>
+<section class="py-16 position-relative overflow-hidden">
+    <img class="position-absolute top-0 start-0 h-100" src="flaro-assets/images/footers/gradient4.svg" alt=""/>
   <div class="container position-relative">
     <div class="d-none d-md-inline-flex flex-wrap position-absolute top-50 start-50 translate-middle justify-content-center" style="z-index: 10;">
       <div class="p-4"><a class="btn p-0 btn-link text-secondary" href="#" >About</a></div>
