--- a/rants/main/templates/partials/_navbar.html
+++ b/rants/main/templates/partials/_navbar.html
@@ -1,6 +1,6 @@
 <section>
     <nav class="navbar navbar-expand-lg navbar-light bg-light"  >
-      <div class="container"><a class="navbar-brand" href="#"><img class="img-fluid" src="flaro-assets/logos/flaro-logo-black.svg" alt=""/></a>
+      <div class="container"><a class="navbar-brand" href="#">Fringe</a>
         <div class="collapse navbar-collapse me-5 justify-content-end">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#" >Features</a></li>
