--- a/rants/main/templates/partials/_navbar.html
+++ b/rants/main/templates/partials/_navbar.html
@@ -1,41 +1,1 @@
-<section>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"  >
-      <div class="container"><a class="navbar-brand" href="#">Fringe</a>
-        <div class="collapse navbar-collapse me-5 justify-content-end">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#" >Features</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" >Solutions</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" >Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" >Pricing</a></li>
-          </ul>
-        </div>
-        <div class="d-none d-lg-block"><a class="btn btn-primary" href="#" >Try 14 Days Free Trial</a></div>
-        <div class="d-lg-none">
-          <button class="btn navbar-burger p-0">
-            <svg class="text-primary" width="51" height="51" viewbox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect width="56" height="56" rx="28" fill="currentColor"></rect>
-              <path d="M37 32H19M37 24H19" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
-          </button>
-        </div>
-      </div>
-    </nav>
-    <div class="d-none navbar-menu position-fixed top-0 start-0 bottom-0 w-75 mw-xs" style="z-index: 9999;"  >
-      <div class="navbar-close navbar-backdrop position-fixed top-0 start-0 end-0 bottom-0 bg-dark" style="opacity: 75%;"></div>
-      <nav class="position-relative h-100 w-100 d-flex flex-column justify-content-between py-8 px-8 bg-white overflow-auto">
-        <div class="d-flex align-items-center"><a class="me-auto h4 mb-0 text-decoration-none" href="#"><img class="img-fluid" src="flaro-assets/logos/flaro-logo-black.svg" alt=""/></a><a class="navbar-close" href="#">
-            <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M6 18L18 6M6 6L18 18" stroke="#111827" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg></a></div>
-        <div class="py-16">
-          <ul class="nav flex-column">
-            <li class="nav-item mb-8"><a class="nav-link text-dark" href="#" >Features</a></li>
-            <li class="nav-item mb-8"><a class="nav-link text-dark" href="#" >Solutions</a></li>
-            <li class="nav-item mb-8"><a class="nav-link text-dark" href="#" >Resources</a></li>
-            <li class="nav-item"><a class="nav-link text-dark" href="#" >Pricing</a></li>
-          </ul>
-        </div>
-        <div><a class="btn w-100 fw-medium" href="#" >Login</a><a class="btn w-100 btn-primary" href="#" >Sign in</a></div>
-      </nav>
-    </div>
-  </section>
+Navbar
